--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "server": "node server/index.js"
+    "server": "node server/index.js",
+    "start": "npm run server & serve -s dist -l 3000",
+    "start:prod": "npm run build && npm run start"
   },
   "dependencies": {
     "react": "^18.3.1",
