--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
     "build": "vite build",
     "preview": "vite preview",
     "server": "node server/index.js",
-    "start": "npm run server & serve -s dist -l 3000",
-    "start:prod": "npm run build && npm run start"
+    "start": "npm run build && node server/index.js",
+    "start:prod": "npm run build && node server/index.js"
   },
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-qr-code": "^2.0.13",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "express": "^5.1.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
-    "express": "^5.1.0",
     "vite": "^5.4.8"
   }
 }
